# tinypy

./: CMakeLists.txt  main.cpp
code/: BinaryFileParse.cpp  BinaryFileParse.h  CodeObject.cpp  CodeObject.h  bytecode.h
object/: HiInteger.cpp  HiInteger.h  HiObject.cpp  HiObject.h  HiString.cpp  HiString.h  KClass.cpp  Klass.h
runtime/: frameobject.cpp  frameobject.h  funtionobject.cpp  funtionobject.h  interpreter.cpp  interpreter.h  loopblock.cpp  loopblock.h  universe.cpp  universe.h
test/: test_builtin.py  test_default_param.py  test_func.py  test_global.py  test_param.py  test_while.py
util/: ArrayList.cpp  ArrayList.h  BufferedInputStream.cpp  BufferedInputStream.h  map.cpp  map.h
